fix: adjust input config panel width to compensate for scroll bar when visible

--- a/src/renderer/styles/ConfigPanel.css
+++ b/src/renderer/styles/ConfigPanel.css
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  overflow-y: overlay;
 }
 
 #config-panel .message {
